# modelaudit

./: .ci-debug  .dockerignore  .editorconfig  .gitattributes  .gitignore  .mailmap  .modelaudit.toml.example  .pre-commit-config.yaml  .ruff.toml  AGENTS.md  AUDIT_MISSING_CHECKS.md  AUTH.md  CACHE_INTEGRATION_REMAINING_TASKS.md  CACHE_INTEGRATION_TASKS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN_PARALLEL_SCANNING.md  Dockerfile  Dockerfile.full  Dockerfile.tensorflow  FALSE_POSITIVE_REDUCTION_SUMMARY.md  GEMINI.md  HYBRID_IMPLEMENTATION_TEST_REPORT.md  LAZY_LOADING_OPTIMIZATION.md  MAINTAINERS.md  MANIFEST.in  MIGRATION_GUIDE.md  MIGRATION_SUMMARY.md  MOCK_IMPROVEMENTS_SUMMARY.md  MXNET_IMPLEMENTATION.md  README.md  REVIEW.md  RULES.md  SECURITY.md  SECURITY_REVIEW_PR424.md  SECURITY_ROADMAP.md  STREAMING_TESTING_GUIDE.md  SUPPORT.md  (+75 more)
.cursor/rules/: 001-sequential-commands.mdc
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  markdown-link-check-config.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: README.md  codeql.yml  docker-image-test.yml  docker-publish.yml  docker.yml  docs-check.yml  nightly.yml  release-please.yml  release.yml  tag.yml  test.yml  validate-pr-title.yml
.local/: generate_pmml.py  iris_model.pmml
.local/test_models/: FALSE_POSITIVES.md  README.md  SCAN_RESULTS.md  generate_all_formats.py  generate_improved.py  generate_legitimate_models.py  jax_model.msgpack  keras_model.h5  legacy_model.ggjt  legacy_model.ggmf  legacy_model.ggml  llama_model.gguf  mobile_model.ptl  mobile_model.tflite  model.safetensors  model_archive.tar  model_params.npz  model_weights.npy  model_weights.npz  openvino_model.xml  optimized_model.engine  paddle_model.pdiparams  pytorch_checkpoint.ckpt  pytorch_full_model.pt  pytorch_state_dict.pth  regression_model.pmml  simple_model.onnx  simple_model.pkl  sklearn_logistic.pkl  sklearn_rf.joblib  test_scanner.sh
auth/: __init__.py  client.py  config.py
docs/: MIGRATION_GUIDE.md  REFACTORING_PLAN.md  REMEDIATION_DESIGN.md  additional_blind_spot_examples.md  build_datasheet_pdf.py  comprehensive_evidence_list.md  cve-2025-32434.md  cve-detection.md  expanded_test_models_list.md  extreme-large-models.md  jfrog-testing-guide.md  large-model-support.md  large-models.md  modelaudit-datasheet.md  models.md  modelscan-competitive-analysis.md  modelscan_audit_analysis.md  modelscan_comparison_results.md  pytorch-security-guide.md  xgboost_scanner_implementation.md
docs/agents/: architecture.md  ci-workflow.md  commands.md  dependencies.md  model-test-corpus.md  new-scanner-quickstart.md  release-process.md  security-checks.md  testing.md
docs/maintainers/: cve-process.md  dependency-policy.md  security-advisory-template.md  triage-playbook.md
docs/plans/: eliminate-tensorflow-dependency.md  open-source-readiness.md  security-audit-findings.md
docs/security/: pytorch-checklist.md  pytorch-supply-chain.md  threat-model.md
docs/user/: compatibility-matrix.md  metadata-extraction.md  offline-air-gapped.md  security-model.md
examples/: jax_flax_scanning_demo.py  telemetry_example.py
mlruns/0/: meta.yaml
modelaudit/: __init__.py  __main__.py  cli.py  config.py  core.py  cve_patterns.py  data_leakage_detector.py  explanations.py  interrupt_handler.py  jfrog_integration.py  jit_script_detector.py  license_checker.py  metadata_extractor.py  mlflow_integration.py  models.py  network_comm_detector.py  parallel_directory.py  parallel_scanner.py  rules.py  sarif_formatter.py  sbom.py  secrets_detector.py  suspicious_symbols.py  telemetry.py
modelaudit/analysis/: __init__.py  anomaly_detector.py  enhanced_pattern_detector.py  entropy_analyzer.py  framework_patterns.py  integrated_analyzer.py  ml_context_analyzer.py  opcode_sequence_analyzer.py  semantic_analyzer.py  unified_context.py
modelaudit/auth/: __init__.py  client.py  config.py
modelaudit/cache/: __init__.py  adaptive_cache_keys.py  batch_operations.py  cache_manager.py  optimized_config.py  scan_results_cache.py  smart_cache_keys.py
modelaudit/config/: __init__.py  constants.py  explanations.py  name_blacklist.py  rule_config.py
modelaudit/context/: __init__.py  unified_context.py
modelaudit/detectors/: __init__.py  cve_patterns.py  jit_script.py  network_comm.py  secrets.py  suspicious_symbols.py
modelaudit/integrations/: __init__.py  license_checker.py  mlflow.py  sarif_formatter.py  sbom_generator.py
modelaudit/knowledge/: __init__.py  framework_patterns.py
modelaudit/name_policies/: blacklist.py
modelaudit/progress/: __init__.py  base.py  console.py  file.py  hooks.py  multi_phase.py
modelaudit/protos/: LICENSE  NOTICE  __init__.py
modelaudit/remediation/: __init__.py  base.py
modelaudit/scanners/: __init__.py  base.py  catboost_scanner.py  cntk_scanner.py  keras_utils.py  (+52 more)
reviews/: repo-audit-2026-03-05.md
scripts/: README.md  advanced_malicious_pickles.py  check_circular_imports.py  compare_implementations.py  compile_tensorflow_protos.sh  comprehensive_modelscan_test.py  pre-push-validation.sh  verify_models.py
tests/: MOCK_MIGRATION_GUIDE.md  README.md  additional_mock_utils.py  conftest.py  demo_license_functionality.py  dill_func.pkl  evil.pickle  evil_pickle.py  mock_utils.py  test_additional_mocks.py  test_advanced_file_handler.py  test_advanced_size_limits.py  test_analysis_modules.py  test_asset_from_scan_result.py  test_asset_integration.py  test_asset_inventory_integration.py  test_asset_list.py  test_asset_scan.py  test_auth_config.py  test_base_scanner.py  test_baseline_drift.py  test_basic.py  test_bug1_confidence_exploit.py  test_builtin_detection.py  test_cache.py  test_cache_cli.py  test_cache_large_files.py  test_cache_optimizations.py  test_cli.py  test_cli_cache_dir.py  test_cli_default_command.py  test_cli_file_filtering.py  test_cli_license_integration.py  test_cli_parallel.py  test_cloud_storage.py  test_compile_eval_variants.py  test_coreml_scanner.py  test_cve_2025_10155_bin_pickle.py  test_cve_detection.py  test_data_leakage_detector.py  (+126 more)
(+337 files in other folders)
