[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "modelaudit"
version = "0.1.0"
description = "Model file scanning library for detecting malicious code in ML model files"
authors = ["Ian Webster <ian@promptfoo.dev>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/promptfoo/modelaudit"
homepage = "https://github.com/promptfoo/modelaudit"
keywords = ["ai", "ml", "security", "model-scanning", "pickle", "tensorflow", "pytorch"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
click = "^8.1.3"
yaspin = "^2.3.0"

# Optional dependencies for specific scanners
tensorflow = { version = ">=2.6", optional = true }
h5py = { version = ">=3.1", optional = true }
torch = { version = ">=1.6", optional = true }
pyyaml = { version = "^6.0", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
coverage = "^7.2.7"
mypy = "^1.4.1"
ruff = ">=0.10.0"
types-PyYAML = "^6.0.12.20250516"
types-tensorflow = "^2.18.0.20250516"
pytest-cov = "^6.2.1"
pre-commit = "^4.2.0"

[tool.poetry.extras]
tensorflow = ["tensorflow"]
h5 = ["h5py"]
pytorch = ["torch"]
yaml = ["pyyaml"]
all = ["tensorflow", "h5py", "torch", "pyyaml"]

[tool.poetry.scripts]
modelaudit = "modelaudit.cli:main"

# Ruff configuration - 2025 Best Practices
[tool.ruff]
# Consistent with Black's default line length
line-length = 88
indent-width = 4

# Target Python 3.12 for modern features (adjust as needed)
target-version = "py312"

# Enable preview mode for cutting-edge features
preview = true

# Modern file discovery patterns
include = ["*.py", "*.pyi", "**/pyproject.toml"]

# Comprehensive exclusion patterns
exclude = [
    ".bzr",
    ".direnv", 
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pycache__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "scratch",
]

[tool.ruff.lint]
# Comprehensive modern rule selection for 2025
select = [
    # Core Python rules
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings  
    "F",     # pyflakes
    
    # Import and code organization
    "I",     # isort import sorting
    "ICN",   # import conventions
    "TCH",   # type-checking imports
    
    # Modern Python features and upgrades
    "UP",    # pyupgrade (modern Python syntax)
    "FA",    # future annotations
    
    # Code quality and bugs
    "B",     # flake8-bugbear (common bugs)
    "C4",    # flake8-comprehensions
    "SIM",   # flake8-simplify
    "PIE",   # flake8-pie (misc improvements)
    "RET",   # flake8-return
    "PTH",   # flake8-use-pathlib
    "PERF",  # performance optimizations
    
    # Security and best practices
    "S",     # flake8-bandit (security)
    "BLE",   # flake8-blind-except
    "FBT",   # flake8-boolean-trap
    "A",     # flake8-builtins
    "EM",    # flake8-errmsg
    "INP",   # flake8-no-pep420
    
    # Documentation and naming
    "D",     # pydocstyle
    "N",     # pep8-naming
    
    # Type annotations (modern best practice)
    "ANN",   # flake8-annotations
    
    # Logging and debugging
    "G",     # flake8-logging-format
    "T20",   # flake8-print
    "LOG",   # flake8-logging
    
    # Testing best practices
    "PT",    # flake8-pytest-style
    
    # Ruff-specific modern rules
    "RUF",   # Ruff-specific rules
    
    # Code complexity and maintainability
    "C90",   # mccabe complexity
    "PLR",   # pylint refactor
    "PLC",   # pylint convention
    "PLE",   # pylint error
    "PLW",   # pylint warning
]

ignore = [
    # Formatter conflicts - let ruff format handle these
    "E501",   # Line too long (handled by formatter)
    "E203",   # Whitespace before ':' (conflicts with formatter)
    
    # Docstring rules - adjust based on your documentation standards
    "D100",   # Missing docstring in public module
    "D101",   # Missing docstring in public class  
    "D102",   # Missing docstring in public method
    "D103",   # Missing docstring in public function
    "D104",   # Missing docstring in public package
    "D105",   # Missing docstring in magic method
    "D107",   # Missing docstring in __init__
    
    # Annotation rules - gradually enable as you add type hints
    "ANN101", # Missing type annotation for self
    "ANN102", # Missing type annotation for cls
    "ANN401", # Dynamically typed expressions (Any)
    
    # Security rules that may be too restrictive for this project
    "S101",   # Use of assert detected
    "S311",   # Standard pseudo-random generators
    
    # Boolean trap - may be useful but can be noisy
    "FBT001", # Boolean positional arg in function definition
    "FBT002", # Boolean default value positional argument
    "FBT003", # Boolean positional value in function call
    
    # These can be noisy in some codebases
    "EM101",  # Exception string literal
    "EM102",  # Exception f-string literal
    "EM103",  # Exception .format() string
    
    # Complexity rules - adjust thresholds as needed
    "C901",   # Complex function (McCabe)
    "PLR0913", # Too many arguments to function call
    "PLR0912", # Too many branches
    "PLR0915", # Too many statements
    "PLR2004", # Magic value used in comparison
]

# Allow automatic fixes for most rules
fixable = ["ALL"]
unfixable = [
    # Don't auto-fix these potentially risky rules
    "F401",   # Unused imports (review manually)
    "F841",   # Unused variables (review manually) 
]

# Allow unused variables when underscore-prefixed  
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
# __init__.py files often have imports for re-export
"__init__.py" = [
    "D104",   # Missing docstring in public package
    "E402",   # Module level import not at top of file
    "F401",   # Imported but unused  
    "F403",   # Star import used
    "F811",   # Redefined while unused
]

# CLI files may use print statements
"**/cli.py" = [
    "T201",   # print found
    "T203",   # pprint found
]

# Test files have different standards
"tests/**/*.py" = [
    "D",      # Skip all docstring rules in tests
    "S101",   # Use of assert detected
    "S106",   # Possible hardcoded password
    "S108",   # Probable insecure usage of temp file/directory  
    "S311",   # Standard pseudo-random generators
    "S602",   # subprocess call with shell=True
    "T201",   # print found
    "PLR2004", # Magic value used in comparison
    "ANN",    # Skip annotation rules in tests
]

# Package files may have relative imports
"modelaudit/**/*.py" = [
    "E402",   # Module level import not at top of file (for __future__ imports)
]

# Example/demo files
"examples/**/*.py" = [
    "T201",   # print found
    "D",      # Skip docstring rules
]

[tool.ruff.lint.flake8-annotations]
# Be less strict about annotations during migration
allow-star-arg-any = true
ignore-fully-untyped = true

[tool.ruff.lint.flake8-bandit]
# Configure security rules
check-typed-exception = true

[tool.ruff.lint.flake8-builtins]
# Don't flag these common variable names
builtins-ignorelist = ["id", "input", "filter"]

[tool.ruff.lint.flake8-pytest-style]
# Modern pytest best practices
fixture-parentheses = false
mark-parentheses = false
parametrize-names-type = "tuple"
parametrize-values-type = "tuple"  
parametrize-values-row-type = "tuple"

[tool.ruff.lint.isort]
# Modern import sorting configuration
known-first-party = ["modelaudit"]
combine-as-imports = true
force-wrap-aliases = true
split-on-trailing-comma = true
force-single-line = false

# Use these sections for better organization
section-order = [
    "future",
    "standard-library", 
    "third-party",
    "first-party",
    "local-folder"
]

[tool.ruff.lint.mccabe]
# Set reasonable complexity threshold
max-complexity = 10

[tool.ruff.lint.pep8-naming]
# Naming convention configuration
extend-ignore-names = ["X", "Y", "Z", "T"]  # Common single letter vars

[tool.ruff.lint.pylint]
# Pylint rule configuration
max-args = 6
max-branches = 12
max-returns = 6
max-statements = 50

[tool.ruff.lint.pydocstyle]
# Docstring style - Google convention is popular for ML projects
convention = "google"

[tool.ruff.format]
# Modern formatting options (Black-compatible)
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

# Modern docstring formatting
docstring-code-format = true
docstring-code-line-length = "dynamic"

# Preview mode formatting features
preview = true

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
ignore_missing_imports = true
no_implicit_optional = false
