[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "modelaudit"
version = "0.1.0"
description = "Model file scanning library for detecting malicious code in ML model files"
authors = ["Ian Webster <ian@promptfoo.dev>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/promptfoo/modelaudit"
homepage = "https://github.com/promptfoo/modelaudit"
keywords = ["ai", "ml", "security", "model-scanning", "pickle", "tensorflow", "pytorch"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
click = "^8.1.3"
yaspin = "^2.3.0"

# Optional dependencies for specific scanners
tensorflow = { version = ">=2.6", optional = true }
h5py = { version = ">=3.1", optional = true }
torch = { version = ">=1.6", optional = true }
pyyaml = { version = "^6.0", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
coverage = "^7.2.7"
mypy = "^1.4.1"
ruff = ">=0.10.0"
types-PyYAML = "^6.0.12.20250516"
types-tensorflow = "^2.18.0.20250516"
pytest-cov = "^6.2.1"
pre-commit = "^4.2.0"

[tool.poetry.extras]
tensorflow = ["tensorflow"]
h5 = ["h5py"]
pytorch = ["torch"]
yaml = ["pyyaml"]
all = ["tensorflow", "h5py", "torch", "pyyaml"]

[tool.poetry.scripts]
modelaudit = "modelaudit.cli:main"

# Alternative: Community "ALL" approach
# [tool.ruff]
# line-length = 88
# target-version = "py39"

# [tool.ruff.lint]
# select = ["ALL"]  # Enable everything
# ignore = [
#     # Docstrings (adjust based on your needs)
#     "D",
#     # Annotations (gradually enable as you add type hints)
#     "ANN",
#     # Some overly strict rules
#     "FBT",  # Boolean traps
#     "EM",   # Exception messages
#     "COM",  # Commas (formatter handles this)
# ]

# [tool.ruff.lint.per-file-ignores]
# "__init__.py" = ["F401"]
# "tests/**/*.py" = ["S101", "D", "ANN"]

# [tool.ruff.format]
# # Use defaults

# Alternative: Hatch-inspired balanced approach
# [tool.ruff]
# line-length = 88
# target-version = "py39"

# [tool.ruff.lint]
# select = [
#     "E", "W",  # pycodestyle
#     "F",       # pyflakes  
#     "I",       # isort
#     "UP",      # pyupgrade
#     "B",       # bugbear
#     "C4",      # comprehensions
#     "PTH",     # pathlib
#     "SIM",     # simplify
#     "RUF",     # ruff-specific
# ]

# [tool.ruff.lint.per-file-ignores]
# "__init__.py" = ["F401"]
# "tests/**/*.py" = ["S101"]

# Ruff configuration - Ultra-minimal approach
[tool.ruff]
line-length = 88  # Match Black
target-version = "py39"

[tool.ruff.lint]
# Just add import sorting to the defaults (F + subset of E)
extend-select = ["I"]  # Add isort

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports OK in __init__.py
"tests/**/*.py" = ["S101"]  # assert statements OK in tests

[tool.ruff.format]
# Use defaults (Black-compatible)

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
ignore_missing_imports = true
no_implicit_optional = false
